feat(02-01): fix outdated version refs in titles/dirs, remove enable-preview, structural review
- Renamed 4 lesson directories to remove embedded Java version numbers:
  - java-23 -> removed from lesson 1.6
  - java-8 -> removed from lessons 5.6 and 5.7
  - java-21 -> removed from lesson C.5
- Updated lesson.json titles to remove version tags
- Updated module 07 description: removed "Java 21's" reference
- Updated module 11 description: Spring Boot 3.4+ -> 4.0+
- Removed all --enable-preview references (2 files)
- Fixed "Stable in Java 23" references in content

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>